# packmate-mcp

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-05-13-packmate-mcp.md
docs/superpowers/specs/: 2026-05-13-packmate-mcp-design.md
src/packmate_mcp/: __init__.py  __main__.py  client.py  config.py  formatting.py  models.py  server.py
src/packmate_mcp/tools/: __init__.py  packets.py  patterns.py  pcap.py  services.py  streams.py
tests/: conftest.py  test_client.py  test_config.py  test_formatting.py  test_models.py  test_tools.py
